--- a/VidCoder/Controls/InlineWarning.xaml
+++ b/VidCoder/Controls/InlineWarning.xaml
@@ -3,10 +3,18 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 	<Grid>
 		<Border Background="#F7F7CD" CornerRadius="4" Padding="3" BorderBrush="LightGray" BorderThickness="1">
-			<StackPanel Orientation="Horizontal">
-				<Image Source="/Icons/warning.png" Height="18" />
-				<TextBlock Name="warningText" FontSize="14" VerticalAlignment="Center" Margin="4,0,0,0" />
-			</StackPanel>
+			<Grid>
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="Auto" />
+					<ColumnDefinition Width="*" />
+				</Grid.ColumnDefinitions>
+				<Image
+					Grid.Column="0"
+					Source="/Icons/warning.png" Height="18" />
+				<TextBlock
+					Grid.Column="1"
+					Name="warningText" FontSize="14" VerticalAlignment="Center" Margin="4,0,4,0" TextWrapping="Wrap" />
+			</Grid>
 		</Border>
 	</Grid>
 </UserControl>
